--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
-  }
+  },
+  "predeploy": "next build",
+  "deploy": "next export"
 }
